make sure overflow auto

--- a/NewFrontEnd/src/assets/sass/components/_BookmarksList.scss
+++ b/NewFrontEnd/src/assets/sass/components/_BookmarksList.scss
@@ -8,10 +8,6 @@
   height: 100%;
   text-align: center;
 
-  &-bookmarks {
-    overflow-y: auto;
-  }
-
   &-title {
     @extend .py-2;
     @include font-type('secondary-title');
